<resources>
    <string name="app_name">AndroidSipChat</string>


    <!-- Login -->
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="regist">注册</string>
    <string name="register_name">用户名</string>
    <string name="register_password">密码</string>
    <string name="ensure_password">确认你的密码</string>
    <string name="register_ensure">注册</string>
    <string name="register_to_login">登录</string>


    <string name="drawer_string"> </string>

    <!--菜单栏-->
    <string name="menu_contract">联系人</string>
    <string name="menu_channel">频道</string>
    <string name="menu_message">消息</string>


    <!-- Toolbar-->
    <string name="search">Search</string>
    <string name="sub_add">订阅/添加 新频道</string>
</resources>
