<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/register_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin_out"
        android:layout_marginEnd="@dimen/card_margin_out"
        android:layout_marginStart="@dimen/card_margin_out"
        android:layout_marginTop="@dimen/card_margin_out"

        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/regist"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edittext_margin"
                    android:layout_marginStart="@dimen/edittext_margin"
                    android:hint="@string/register_name"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/darkblue"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="@color/darkgray" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edittext_margin"
                    android:layout_marginStart="@dimen/edittext_margin"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/darkblue"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="@color/darkgray" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/register_password_ensure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edittext_margin"
                    android:layout_marginStart="@dimen/edittext_margin"
                    android:hint="@string/ensure_password"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/darkblue"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="@color/darkgray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_ensure" />


                <TextView
                    android:id="@+id/register_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:onClick="flipCard"
                    android:text="@string/register_to_login"
                    android:textColor="@color/darkgray"
                    android:textColorHint="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</FrameLayout>