<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_margin_out"
        android:layout_marginEnd="@dimen/card_margin_out"
        android:layout_marginTop="@dimen/card_margin_out"
        android:layout_marginBottom="@dimen/card_margin_out"
        android:id="@+id/login_card"

        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/edittext_margin"
                android:text="@string/login"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edittext_margin"
                    android:layout_marginStart="@dimen/edittext_margin"
                    android:hint="@string/login_name"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/darkblue"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="@color/darkgray" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/edittext_margin"
                    android:layout_marginStart="@dimen/edittext_margin"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/darkblue"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="@color/darkgray" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />


                <TextView
                    android:layout_marginBottom="5dp"
                    android:id="@+id/login_to_registe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:clickable="true"
                    android:editable="false"
                    android:text="@string/register"
                    android:textColor="@color/darkgray"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/small_text_size"
                    android:onClick="flipCard" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</FrameLayout>


